# carterkit

./: .gitignore  CHANGELOG.md  LICENSE  PARITY.md  README.md  pyproject.toml
.github/workflows/: publish.yml
carterkit/: __init__.py  bind.py  buffer.py  catalog.py  cli.py  client.py  codegen.py  connection.py  contract.py  controls.py  declare.py  dynamic.py  e2ee.py  explore.py  explore_html.py  grid.py  hub.py  infer.py  layout.py  qr.py  relay.py  theming.py  tune.py  validate.py
carterkit/controldocs/: accordion.md  actions.md  animations.md  appearance.md  box-plot.md  button.md  camera.md  canvas.md  cardList.md  carousel.md  chart.md  chat.md  chord.md  color-picker.md  compass.md  control-def.md  date-picker.md  divider.md  flip-card.md  gantt.md  gauge.md  graph.md  grid-dimensions.md  group-def.md  haptics.md  heatmap.md  image.md  index.md  joystick.md  label.md  layout-config.md  list.md  log-console.md  long-press.md  map.md  picker.md  pie-chart.md  pinboard.md  privacy.md  progress-ring.md  (+22 more)
scripts/: sync-controldocs.sh
tests/: test_bind.py  test_buffer.py  test_catalog.py  test_cli.py  test_client.py  test_codegen.py  test_connection.py  test_contract.py  test_controls.py  test_declare.py  test_dynamic.py  test_e2ee.py  test_explore.py  test_grid.py  test_hub.py  test_infer.py  test_layout.py  test_parity_acceptance.py  test_parity_authoring.py  test_qr.py  test_qr_oracle.py  test_theming.py  test_tune.py  test_ui.py  test_validate.py  test_validate_bindings.py
tests/e2e/: studio_mirror_e2e.py
